# GemScouting

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/config/: settings.py
app/core/: database.py  schemas.py
